tests/compile_time_tests/tag_attribute_case_argument_is_not_string_literal.rs
use tagname::TagName;

#[derive(TagName)]
enum Cases {
    #[tag(case = 1)]
    Lower,
    Upper
}

fn main() {
}
